--- a/public/scss/layout/_footer.scss
+++ b/public/scss/layout/_footer.scss
@@ -3,8 +3,7 @@
 footer {
   height: 65px;
 
-  .github-icon {
+  .github-icon path {
     fill: abstracts.$primary-color-600;
   }
 }
-
